--- a/ws/ui/index.html
+++ b/ws/ui/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="a"></div>
     <script type="module" src="/src/app/index.ts"></script>
   </body>
 </html>
